--- a/www/index.html
+++ b/www/index.html
@@ -58,7 +58,7 @@
     <script src="js/leadersController.js"></script>
     <script src="js/statController.js"></script>
     <script src="js/controllers.js"></script>
-    <!-- <script src="js/accController.js"></script> -->
+    <script src="js/accController.js"></script>
     <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
     <script src="js/map-controllers/geoController.js"></script>
